add socket.io and fix script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Chat SocketIO",
   "main": "src/index.js",
   "scripts": {
+    "start": "node src",
     "dev": "npx nodemon src",
     "lint": "npx eslint ."
   },
@@ -14,7 +15,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "hasha": "^5.1.0",
-    "mongoose": "^5.8.0"
+    "mongoose": "^5.8.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
